<resources>
    <string name="Welcome">لطفا فرم زیر را کامل کنید</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="pass">پسورد</string>
    <string name="repeatpass">تکرار پسورد</string>
    <string name="app_name">قبول دارم</string>
    <string name="Submit">ارسال</string>

    <string name="Text">dscsdcdscsdcsdvlkdsnvlkdsavndlafvndflavnkldvlkdfanvdflakvmdflkavmdflkavmfdalkvmdklamvlkdafvm
        dakvmdfalkvmlkdfavmlakd</string>
</resources>
